--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -67,7 +67,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Ui9-go-TNU">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
@@ -97,18 +97,64 @@
             </objects>
             <point key="canvasLocation" x="703" y="-100"/>
         </scene>
-        <scene sceneID="ONl-eS-USZ">
+        <scene sceneID="j7w-es-m03">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SbC-Jw-qkW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="ViewController" id="4Mu-E1-J6u" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Zoq-VQ-6Tw">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qlZ-ik-BA9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="8ss-Y2-eWs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LJy-p0-kXm">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="0.72941178080000002" green="0.0039215688589999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="psu-Z3-aRf">
+                                <rect key="frame" x="167" y="198" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="MgQ-Dt-UIY" kind="push" id="t6l-B0-Nhy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="?" id="5NQ-YP-vtx"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="703" y="495"/>
+            <point key="canvasLocation" x="1237" y="1094"/>
+        </scene>
+        <scene sceneID="21c-73-weD">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wO9-oI-RBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="MgQ-Dt-UIY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SDw-KN-xJ0">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="0h9-ez-1WW"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1739" y="1094"/>
+        </scene>
+        <scene sceneID="Qn1-u2-B0P">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B41-Ow-dGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController storyboardIdentifier="NavController" definesPresentationContext="YES" id="P1I-x7-8H2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="ECU-pv-R9Q" customClass="LeatherNavBar">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8ss-Y2-eWs" kind="relationship" relationship="rootViewController" id="PWR-V4-c3a"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="703" y="1094"/>
         </scene>
     </scenes>
     <classes>
@@ -119,6 +165,9 @@
                 <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="videoPreviewView" candidateClass="UIView"/>
             </relationships>
+        </class>
+        <class className="LeatherNavBar" superclassName="UINavigationBar">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LeatherNavBar.h"/>
         </class>
         <class className="RootViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
