--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -97,60 +97,114 @@
             </objects>
             <point key="canvasLocation" x="703" y="-100"/>
         </scene>
-        <scene sceneID="j7w-es-m03">
+        <scene sceneID="amd-gF-xAG">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qlZ-ik-BA9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="8ss-Y2-eWs" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="LJy-p0-kXm">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xQf-Nf-uSW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="6WW-2C-eMq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AqV-DG-4O5">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="psu-Z3-aRf">
-                                <rect key="frame" x="167" y="198" width="72" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="MgQ-Dt-UIY" kind="push" id="t6l-B0-Nhy"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="?" id="5NQ-YP-vtx"/>
+                    <navigationItem key="navigationItem" title="News Feed" id="pO3-kZ-4ui"/>
                 </viewController>
+            </objects>
+            <point key="canvasLocation" x="1237" y="483"/>
+        </scene>
+        <scene sceneID="vtA-0w-14H">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qwp-77-UrK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="4Xt-Pu-qX1" customClass="AlbumsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="CnB-a5-eFn">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LocalAlbum" id="8ko-zM-3aT">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4Xt-Pu-qX1" id="5Fu-IH-0Qr"/>
+                            <outlet property="delegate" destination="4Xt-Pu-qX1" id="M1R-Ya-zBV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Albums" id="GpS-Dg-ZbY"/>
+                </tableViewController>
             </objects>
             <point key="canvasLocation" x="1237" y="1094"/>
         </scene>
-        <scene sceneID="21c-73-weD">
+        <scene sceneID="6jE-BF-awP">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wO9-oI-RBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="MgQ-Dt-UIY" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="SDw-KN-xJ0">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HI9-ac-vv3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="LocalTracks" id="Nif-Gi-iJw" customClass="LocalTracksTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="aMF-lh-8r1">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Video" id="qzO-TQ-Dhn">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Nif-Gi-iJw" id="uVD-B2-Md5"/>
+                            <outlet property="delegate" destination="Nif-Gi-iJw" id="eK6-z3-xfH"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Vids" id="ICp-E5-XSB"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1768" y="1094"/>
+        </scene>
+        <scene sceneID="ext-zI-oWj">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zCf-7T-wqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="cjV-ov-Q4n" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rSy-6C-hW9">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="0h9-ez-1WW"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1739" y="1094"/>
+            <point key="canvasLocation" x="2255" y="1094"/>
+        </scene>
+        <scene sceneID="Yhi-Xm-oNz">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ub3-BX-fbM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="Di6-LJ-pT3" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="dGC-qR-Lyn">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="6WW-2C-eMq" kind="relationship" relationship="rootViewController" id="Lcy-jC-hUh"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="703" y="483"/>
         </scene>
         <scene sceneID="Qn1-u2-B0P">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B41-Ow-dGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="NavController" definesPresentationContext="YES" id="P1I-x7-8H2" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="ECU-pv-R9Q" customClass="LeatherNavBar">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="ECU-pv-R9Q">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="8ss-Y2-eWs" kind="relationship" relationship="rootViewController" id="PWR-V4-c3a"/>
+                        <segue destination="4Xt-Pu-qX1" kind="relationship" relationship="rootViewController" id="2wD-QU-JC7"/>
                     </connections>
                 </navigationController>
             </objects>
@@ -158,6 +212,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AlbumsTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AlbumsTableViewController.h"/>
+        </class>
         <class className="CaptureViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CaptureViewController.h"/>
             <relationships>
@@ -166,8 +223,8 @@
                 <relationship kind="outlet" name="videoPreviewView" candidateClass="UIView"/>
             </relationships>
         </class>
-        <class className="LeatherNavBar" superclassName="UINavigationBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LeatherNavBar.h"/>
+        <class className="LocalTracksTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LocalTracksTableViewController.h"/>
         </class>
         <class className="RootViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
